# intro_to_ai_for_devs

./: .gitignore  README.md  intro_to_ai_for_devs.sln
cpp/: CMakeLists.txt  README.md  vcpkg.json
cpp/src/: chatbot_example.cpp  coding_agent_example.cpp  coding_agent_mcp_example.cpp  main.cpp  react_example.cpp  test_openai.cpp
cpp/src/exercises/: react_count_example.cpp
dotnet/: ChatBotExample.cs  CodingAgentExample.cs  CodingAgentMCPExample.cs  CodingAgentTools.cs  Program.cs  README.md  ReActExample.cs  TestOpenAI.cs  dotnet.csproj  setup.md
dotnet/exercises/: CodingAgentGuardrailsExample.cs  ReActCountExample.cs
node/: README.md  chatbot_example.ts  coding_agent_example.ts  coding_agent_mcp_example.ts  coding_agent_tools.ts  package-lock.json  package.json  react_example.ts  setup.md  test_openai.ts  tsconfig.json
node/exercises/: coding_agent_ guardrails_example.ts  coding_agent_guardrails_example.ts  react_count_example.ts
node/tools/: mcp_seqthink_bridge.mjs
python/: README.md  chatbot_example.py  coding_agent_example.py  coding_agent_mcp_example.py  coding_agent_tools.py  mcp_smoke_test.py  react_example.py  setup.md  test_openai.py
python/azureai/: test_azureai.py
python/exercises/: coding_agent_guardrails_example.py  react_count_example.py
python/ralph/: README.md  coding_agent_ralph_example.py  prd.json  prd.md  progress.txt  prompt.md  ralph.sh  spec.md  tech_design.md  test_check_winner.js  test_draw_detection.js  tic_tac_toe.js
